# UI_Development

./: README.md
FarmConnect/backend/: Dockerfile  entrypoint.sh  pyproject.toml
FarmConnect/backend/main/: db.sqlite3
FarmConnect/backend/main/app/: models.py  serializer.py  views.py
FarmConnect/backend/main/app/migrations/: 0001_initial.py  0002_farm_galleryimage_message_and_more.py  0003_rename_snippet_message_message_message_receiver_and_more.py  0005_rename_summary_blogpost_content_and_more.py  0006_alter_galleryimage_image.py  0007_alter_blogpost_category_alter_product_category.py  0008_farm_products_farm_user_message_user.py  0009_chat_remove_message_sender_is_not_receiver_and_more.py  0010_alter_review_blog_post_alter_review_product.py  0011_alter_message_chat.py
FarmConnect/backend/main/app/tests/: blogs.py  farms.py  messages.py  products.py  reviews.py  test.py  test_blogs.py  test_chats.py  test_farms.py  test_messages.py  test_products.py  tests.py
FarmConnect/backend/main/main/: asgi.py  settings.py  urls.py
FarmConnect/backend/src/: db.sqlite3  manage.py
FarmConnect/backend/src/app/: admin.py  forms.py  logger.py  models.py  serializer.py  tasks.py  views.py
FarmConnect/backend/src/app/migrations/: 0004_remove_review_name_product_creator_review_author_and_more.py  0012_alter_chat_unique_together_remove_farm_products_and_more.py  0013_galleryimage_author.py  0014_remove_product_farm_product_farms.py  0015_cart_cartitem_favoriteblog.py  0018_logentry.py  (+3 more)
FarmConnect/backend/src/main/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+112 files in other folders)
